--- a/autonomous_ai/configs/quality.yaml
+++ b/autonomous_ai/configs/quality.yaml
@@ -60,3 +60,30 @@ junk_phrases:
   - "getty images"
   - "reuters"
   - "ap"
+
+financial_junk:
+  - "лонг"
+  - "шорт"
+  - "трейдинг"
+  - "трейдер"
+  - "биржа"
+  - "график"
+  - "уровень"
+  - "сопротивление"
+  - "поддержка"
+  - "треугольник"
+  - "флаг"
+  - "пробой"
+  - "коррекция"
+  - "волна"
+  - "эндикей"
+  - "объем"
+  - "плечо"
+  - "маржин"
+  - "фьючерс"
+  - "опцион"
+  - "спот"
+  - "шорт"
+  - "лонг"
+  - "BTCUSD"
+  - "биток"
